# workbench

./: .editorconfig  .env.sample  .gitignore  CHANGELOG.md  Dockerfile-backend  Dockerfile-design-workbench  Jenkinsfile  README.md  angular.json  decorate-angular-cli.js  gulpfile.js  jest.config.ts  migrations.json  nx.json  package.json  test.ts  tsconfig.base.json  tsconfig.json  tslint.json  workspace.json
.quick-nav/: symlink-project.sh
apps/: webpack.config.ts
apps/design/: jest.config.js  tsconfig.app.json
apps/devops/: jest.config.ts  karma.conf.js  project.json  tslint.json
apps/devops-e2e/: project.json
apps/devops/src/app/puff-app/: BUILD.bazel  puff-app-404.ts  puff-app-directionality.ts  puff-app-home.ts  puff-app-layout.html  puff-app-layout.scss  puff-app-layout.ts  puff-app-module.ts  puff-app-workspace.ts  puff-designer-workspace.ts
apps/playground/: project.json
apps/runtime-drag/: jest.config.ts  project.json  tsconfig.json
apps/test-workbench/: jest.config.ts  project.json  tsconfig.json
apps/workbench/: jest.config.js  jest.config.ts  project.json
deploy/: Dockerfile-fe
deploy/dev-api/: devops-triangle-svc.yaml  devops-triangle.yaml
deploy/dev-ol/: devops-triangle.yaml  devops-workbench.yaml
docs/: forms.md
docs/themes/: oF6psTWPQd.yml  y81IFw6FgE.yml
global/nebular-dark/: bc-forms.scss  styles.scss  (+2 more)
http/: test.http
proxy-config/: development.proxy-config.js  localhost.proxy-config.js  mock-api.proxy-config.js  production.proxy-config.js  test.proxy-config.js  with-api.proxy-config.js
scripts/: cache-node-modules.js
(+2675 files in other folders)
